[tool.poetry]
name = "repl_python3_ToDoList"
version = "0.1.0"
description = "tg_bot_todo_list"
authors = ["MID_Michail <d9067246810@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
pyTelegramBotAPI = "^4.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
